# stash

./: .gitignore  ABOUT.md  CLAUDE.md  README.md  ROADMAP.md  SYSTEM_MODULE.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  voice.html  Програма для копіювання OBS.md
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml
.storybook/: main.ts  preview.css  preview.tsx
design/: Menubar Utility.html  README.md
docs/: 2026-04-19-ai-chat-design.md  CODE_REVIEW_2026-04-22.md  CODE_REVIEW_2026-04-26.md  CONTRIBUTING.md  RELEASE_0.1.10.md  WARNINGS_2026-04-26.md  bug-review-2026-04-19-part2.md  bug-review-2026-04-19.md  design-review-2026-04-19.md  design-review-2026-04-20.md  dry-audit-2026-04-22.md  pre-release-audit-2026-04-24.md  storybook-audit.md  ui-design-review-2026-04-20.md
docs/plans/: 2026-04-19-metronome-design.md  2026-04-20-pomodoro-module.md  2026-04-21-telegram-bot-design.md  2026-04-21-telegram-bot-phase-0-plan.md  2026-04-22-telegram-bot-phase-3-plan.md
helpers/recorder-swift/: Package.swift
landing/: .gitignore  README.md  index.html
landing/project/: Landing.html  robots.txt  sitemap.xml
scripts/: setup-updater.sh  sign-local.sh
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/stash-cli/: Cargo.toml
src-tauri/crates/stash-cli/src/: main.rs
src-tauri/crates/stash-cli/tests/: smoke.rs
src-tauri/crates/stash-diarize/: Cargo.toml  build.rs
src-tauri/crates/stash-diarize/src/: main.rs
src-tauri/crates/stash-separator/: README.md  build.sh  requirements.txt  stash-separator.spec
src-tauri/crates/stash-separator/src/: main.py
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  nspanel.rs  tray.rs
src-tauri/src/backup/: commands.rs  export.rs  import.rs  manifest.rs  mod.rs  registry.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/ai/: backup.rs  commands.rs  keyring.rs  mod.rs  repo.rs  state.rs
src-tauri/src/modules/canvas/: capture.rs  commands.rs  mod.rs  repo.rs  shortcuts.rs
src-tauri/src/modules/circle/: commands.rs
src-tauri/src/modules/clipboard/: backup.rs  commands.rs  mod.rs  monitor.rs  og.rs  pasteboard.rs  repo.rs
src-tauri/src/modules/converter/: commands.rs  jobs.rs  mod.rs  pipeline.rs  presets.rs  state.rs
src-tauri/src/modules/diarization/: catalog.rs  commands.rs  mod.rs  pipeline.rs  state.rs
src-tauri/src/modules/downloader/: arc_cookies.rs  backup.rs  commands.rs  detector.rs  ffmpeg_installer.rs  installer.rs  jobs.rs  mod.rs  platform.rs  progress.rs  resolver.rs  runner.rs  subtitles.rs
src-tauri/src/modules/ipc/: install.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/modules/keepawake/: commands.rs  mod.rs  state.rs
src-tauri/src/modules/media_server/: mod.rs
src-tauri/src/modules/metronome/: backup.rs  commands.rs  mod.rs  state.rs
src-tauri/src/modules/music/: commands.rs
src-tauri/src/modules/neuralnote/: commands.rs  mod.rs
src-tauri/src/modules/notes/: backup.rs  commands.rs  media_server.rs  mod.rs  repo.rs
src-tauri/src/modules/ocr/: mod.rs  pdf.rs  vision.rs
src-tauri/src/modules/pomodoro/: backup.rs  commands.rs  driver.rs  engine.rs  mod.rs  model.rs  repo.rs  state.rs
src-tauri/src/modules/recorder/: commands.rs  helper.rs  mod.rs  repo.rs
src-tauri/src/modules/search/: commands.rs
src-tauri/src/modules/separator/: catalog.rs  commands.rs  installer.rs  jobs.rs  mod.rs  pipeline.rs  state.rs
src-tauri/src/modules/system/: apps_control.rs  battery.rs  caches.rs  cancel.rs  commands.rs  dashboard.rs  ddc.rs  disk_hogs.rs  displays.rs  docker.rs  duplicates.rs  focus.rs  frontmost.rs  large_files.rs  launch_agents.rs  mod.rs  network.rs  node_modules.rs  power.rs  privacy.rs  processes.rs  quick_actions.rs  reminders_bridge.rs  screenshot.rs  trash_bins.rs  uninstaller.rs  weather.rs
src-tauri/src/modules/telegram/: assistant.rs  backup.rs  battery_watcher.rs  calendar.rs  commands.rs  commands_registry.rs  file_secrets.rs  inbox.rs  keyring.rs  mod.rs  module_cmds.rs  notifier.rs  pairing.rs  reminders.rs  repo.rs  sender.rs  settings.rs  state.rs  transport.rs
src-tauri/src/modules/telegram/llm/: anthropic.rs  factory.rs  google.rs  mod.rs  openai.rs
src-tauri/src/modules/telegram/tools/: memory.rs  mod.rs  reminders.rs  stash.rs
src-tauri/src/modules/terminal/: commands.rs  mod.rs  pty.rs  state.rs
src-tauri/src/modules/translator/: backup.rs  commands.rs  engine.rs  mod.rs  repo.rs
src-tauri/src/modules/tuner/: commands.rs  state.rs
src-tauri/src/modules/valeton/: commands.rs  mod.rs  preset_prompt.rs
src-tauri/src/modules/voice/: commands.rs  mod.rs  popup.rs
src-tauri/src/modules/webchat/: commands.rs
src-tauri/src/modules/whisper/: backup.rs  catalog.rs  commands.rs  mod.rs  pipeline.rs  state.rs
src/modules/: registry.ts  types.ts  visibility.test.ts  visibility.ts
src/settings/: AboutTab.tsx  AiTab.test.tsx  AiTab.tsx  AppearancePreview.tsx  AppearanceTab.tsx  BackupSection.test.tsx  BackupSection.tsx  BrowserSection.tsx  CanvasTab.tsx  ClipboardTab.tsx  DataTab.tsx  DownloadsTab.tsx  FfmpegInstallRow.tsx  GeneralTab.tsx  ModulesTab.test.tsx  ModulesTab.tsx  NeuralNoteInstallRow.tsx  NotesTab.tsx  SeparatorTab.test.tsx  SeparatorTab.tsx  SettingRow.stories.tsx  SettingRow.tsx  SettingsLayout.tsx  SettingsSectionHeader.tsx  SettingsShell.test.tsx  SettingsShell.tsx  SliderField.tsx  StashCliRow.test.tsx  StashCliRow.tsx  TelegramTab.tsx  TerminalTab.tsx  TranslatorTestRow.tsx  UpdateCheckRow.test.tsx  UpdateCheckRow.tsx  WebTab.tsx  WindowSection.tsx  YtDlpUpdateRow.tsx  backupApi.ts  index.tsx  pendingSettingsSection.test.ts  (+6 more)
src/shared/: browserUA.ts  contextMenuGuard.test.ts  contextMenuGuard.ts
src/shell/: PopupShell.modules.test.tsx  PopupShell.test.tsx  PopupShell.tsx  UpdateAvailableModal.tsx  tabIcons.tsx  trayMenu.test.ts  trayMenu.ts
src/styles/: tokens.css
src/test/: setup.ts
(+922 files in other folders)
