[package]
name = "stash-app"
version = "0.1.0"
description = "Stash — macOS menubar multitool"
authors = ["OPSRv"]
edition = "2021"

[lib]
name = "stash_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
enigo = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.10"
dirs-next = "2"
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
hmac = "0.12"
sha1 = "0.10"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
libc = "0.2"
portable-pty = "0.8"
base64 = "0.22"
keyring = "3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
whisper-rs = { version = "0.14", features = ["raw-api"] }
lru = "0.12"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
tempfile = "3"
teloxide = { version = "0.13", default-features = false, features = ["rustls", "macros"] }
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
window-vibrancy = "0.6"

# Release profile tuned for a snappy menubar tool: LTO + a single codegen unit
# give a measurable runtime speedup (loops / iterator chains inline better) in
# exchange for slower release builds, and `panic = "abort"` shrinks the binary
# and skips unwind-table work at call sites.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
