[workspace]
members = [".", "crates/stash-cli"]
resolver = "2"

[package]
name = "stash-app"
version = "0.1.4"
description = "Stash — macOS menubar multitool"
authors = ["OPSRv"]
edition = "2021"

[lib]
name = "stash_app_lib"
# `staticlib` was added by the default tauri template for future iOS
# support; Stash is macOS-only and dropping it saves ~660 MB per debug
# build plus keeps CI / dev disks from running out of space.
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Resolve `~/Library/Caches/...` from the build script that stages
# sherpa-onnx dylibs into `sherpa-libs/` for the macOS bundle.
dirs-next = "2"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
enigo = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.10"
dirs-next = "2"
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
hmac = "0.12"
sha1 = "0.10"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
libc = "0.2"
portable-pty = "0.8"
base64 = "0.22"
keyring = "3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
symphonia = { version = "0.5", features = ["all"] }
# Symphonia 0.5's "all" doesn't include Opus — Telegram voice ships as
# OGG/Opus so we demux + decode it in a dedicated path (see
# `modules::whisper::pipeline::decode_ogg_opus`).
ogg = "0.9"
opus = "0.3"
# Pull the transitive `audiopus_sys` directly so we can enable the
# `static` feature — without this, release bundles depend on Homebrew's
# libopus.dylib. The bundled CMakeLists is pre-3.5; see
# `.cargo/config.toml` for the `CMAKE_POLICY_VERSION_MINIMUM` bump that
# lets modern CMake build it.
audiopus_sys = { version = "0.2", features = ["static"] }
rubato = "0.15"
whisper-rs = { version = "0.14", features = ["raw-api"] }
# Speaker diarization. `sherpa-rs` wraps k2-fsa/sherpa-onnx; the
# `download-binaries` feature pulls pre-built libsherpa-onnx static
# libs during cargo build so we don't have to ship a CMake toolchain
# in CI. `tts` is excluded — we only need the offline diarization
# pipeline (pyannote segmentation + speaker embedding).
sherpa-rs = { version = "0.6", default-features = false, features = ["download-binaries"] }
lru = "0.12"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
tempfile = "3"
teloxide = { version = "0.13", default-features = false, features = ["rustls", "macros"] }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
async-trait = "0.1"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
window-vibrancy = "0.6"
# Used by the clipboard module to talk to NSPasteboard directly (file-url
# reads, multi-file writes). Versions match the graph Tauri already pulls
# in so we don't compile two copies of AppKit bindings.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL", "NSData", "NSDictionary", "NSError", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSPasteboardItem", "NSWorkspace", "NSRunningApplication", "NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphics"] }
# Apple Vision framework — used by the OCR pipeline that extracts text
# from photos / image documents / scanned-PDF pages so they land in the
# Telegram inbox transcript field alongside whisper transcripts.
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRequestHandler", "VNRecognizeTextRequest", "VNObservation", "VNTypes"] }
# PDFKit — primary text-layer extraction (`PDFDocument.string`) and
# per-page rendering for the scanned-PDF OCR fallback.
objc2-pdf-kit = { version = "0.3", features = ["PDFDocument", "PDFPage"] }
# Safe NSWindow → NSPanel conversion. The naive `object_setClass` from
# wry's NSWindow subclass (464 B) to stock NSPanel (456 B) is UB, and
# objc2 aborts at runtime when it sees mismatched instance sizes. This
# crate builds a custom NSPanel subclass with ivars sized to match
# wry's, making the isa-swizzle safe. Pinned to the v2.1 branch
# (tauri 2.8+ / objc2 0.6 graph); no crates.io release yet.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

# Release profile tuned for a snappy menubar tool: LTO + a single codegen unit
# give a measurable runtime speedup (loops / iterator chains inline better) in
# exchange for slower release builds, and `panic = "abort"` shrinks the binary
# and skips unwind-table work at call sites.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
