[workspace]
members = [".", "crates/stash-cli", "crates/stash-diarize"]
resolver = "2"

# Workspace-wide clippy posture. Correctness, suspicious, and perf lints
# stay at the default deny level — those catch real bugs. Style lints
# that are pure preference (closure shape, sort variant, helper choice)
# are downgraded to `allow` so a green `clippy -- -D warnings` reflects
# real defects, not a particular reviewer's taste. Project-specific
# tightenings can opt back in by adding the lint to the `warn` block.
[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
manual_map = "allow"
map_unwrap_or = "allow"
unnecessary_map_or = "allow"
needless_pass_by_ref_mut = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
borrow_deref_ref = "allow"
needless_question_mark = "allow"
needless_lifetimes = "allow"
unnecessary_wraps = "allow"
useless_conversion = "allow"
default_trait_access = "allow"
unused_self = "allow"
or_fun_call = "allow"
unnecessary_lazy_evaluations = "allow"
manual_let_else = "allow"
manual_unwrap_or_default = "allow"
manual_string_new = "allow"
manual_strip = "allow"
manual_is_ascii_check = "allow"
match_same_arms = "allow"
single_match_else = "allow"
single_char_pattern = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
collapsible_match = "allow"
let_and_return = "allow"
new_without_default = "allow"
needless_collect = "allow"
ptr_arg = "allow"
no_effect_underscore_binding = "allow"
items_after_statements = "allow"
field_reassign_with_default = "allow"
bool_assert_comparison = "allow"
comparison_to_empty = "allow"
unnecessary_sort_by = "allow"
unnecessary_to_owned = "allow"
useless_format = "allow"
ptr_as_ptr = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cmp_owned = "allow"
to_string_in_format_args = "allow"
implicit_clone = "allow"
single_match = "allow"
match_like_matches_macro = "allow"
let_unit_value = "allow"
empty_line_after_doc_comments = "allow"
doc_markdown = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
question_mark = "allow"
result_large_err = "allow"
large_enum_variant = "allow"
upper_case_acronyms = "allow"
new_ret_no_self = "allow"
wrong_self_convention = "allow"
inherent_to_string = "allow"
from_over_into = "allow"
items_after_test_module = "allow"
ifs_same_cond = "allow"
if_same_then_else = "allow"
expect_fun_call = "allow"

[package]
name = "stash-app"
version = "0.1.24"
description = "Stash — macOS menubar multitool"
authors = ["OPSRv"]
edition = "2021"

[lints]
workspace = true

[lib]
name = "stash_app_lib"
# `staticlib` was added by the default tauri template for future iOS
# support; Stash is macOS-only and dropping it saves ~660 MB per debug
# build plus keeps CI / dev disks from running out of space.
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Resolve `~/Library/Caches/...` from the build script that stages
# sherpa-onnx dylibs into `sherpa-libs/` for the macOS bundle.
dirs-next = "2"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "macos-private-api", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
enigo = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.10"
dirs-next = "2"
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
hmac = "0.12"
sha1 = "0.10"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
libc = "0.2"
portable-pty = "0.8"
base64 = "0.22"
keyring = "3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
symphonia = { version = "0.5", features = ["all"] }
# Symphonia 0.5's "all" doesn't include Opus — Telegram voice ships as
# OGG/Opus so we demux + decode it in a dedicated path (see
# `modules::whisper::pipeline::decode_ogg_opus`).
ogg = "0.9"
opus = "0.3"
# Pull the transitive `audiopus_sys` directly so we can enable the
# `static` feature — without this, release bundles depend on Homebrew's
# libopus.dylib. The bundled CMakeLists is pre-3.5; see
# `.cargo/config.toml` for the `CMAKE_POLICY_VERSION_MINIMUM` bump that
# lets modern CMake build it.
audiopus_sys = { version = "0.2", features = ["static"] }
rubato = "0.15"
whisper-rs = { version = "0.14", features = ["raw-api"] }
# Speaker diarization no longer links here — it lives in the
# `stash-diarize` sidecar binary (see `crates/stash-diarize/`).
# Removing sherpa-rs from the main app drops ~56 MB of shared
# libraries (libonnxruntime + libsherpa-onnx) from the bundle: the
# sidecar plus those dylibs are downloaded into
# `$APPLOCALDATA/diarization/` only when the user opts into
# diarization from Settings.
lru = "0.12"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
tempfile = "3"
teloxide = { version = "0.13", default-features = false, features = ["rustls", "macros"] }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
async-trait = "0.1"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Used only by the AI module's JS-side fetch path (custom OpenAI-compatible
# providers like LM Studio / Ollama). WKWebView fires a CORS preflight on
# every `Authorization`-bearing POST, and most local LLM runtimes either
# don't reply with the right CORS headers or crash on `OPTIONS`. Routing
# through Rust skips the preflight entirely. Cloud providers stay on the
# browser fetch — their APIs allow CORS from any origin.
tauri-plugin-http = "2"
# Synchronous, dependency-light HTTP server. Used by the Notes module to
# expose audio attachments at `http://127.0.0.1:<port>/audio?...` so
# WKWebView/AVFoundation can stream them — `asset://` cannot be opened
# by AVFoundation, which breaks playback for large/streaming media.
tiny_http = "0.12"
# Cross-platform "move to trash" backed by the OS native API (NSWorkspace
# on macOS via Apple's `NSFileManager.trashItem`). Replaces the prior
# `osascript -e 'tell Finder to delete POSIX file "..."'` shell-out — the
# AppleScript form was a safe-string-escape hazard for paths with `\n`,
# `{`, `}` and required focus stealing from Finder; the native call has
# neither problem.
trash = "5"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
window-vibrancy = "0.6"
# Used by the clipboard module to talk to NSPasteboard directly (file-url
# reads, multi-file writes). Versions match the graph Tauri already pulls
# in so we don't compile two copies of AppKit bindings.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL", "NSData", "NSDictionary", "NSError", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSPasteboardItem", "NSWorkspace", "NSRunningApplication", "NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphics"] }
# Apple Vision framework — used by the OCR pipeline that extracts text
# from photos / image documents / scanned-PDF pages so they land in the
# Telegram inbox transcript field alongside whisper transcripts.
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRequestHandler", "VNRecognizeTextRequest", "VNObservation", "VNTypes"] }
# PDFKit — primary text-layer extraction (`PDFDocument.string`) and
# per-page rendering for the scanned-PDF OCR fallback.
objc2-pdf-kit = { version = "0.3", features = ["PDFDocument", "PDFPage"] }
# Safe NSWindow → NSPanel conversion. The naive `object_setClass` from
# wry's NSWindow subclass (464 B) to stock NSPanel (456 B) is UB, and
# objc2 aborts at runtime when it sees mismatched instance sizes. This
# crate builds a custom NSPanel subclass with ivars sized to match
# wry's, making the isa-swizzle safe. Pinned to the v2.1 branch
# (tauri 2.8+ / objc2 0.6 graph); no crates.io release yet.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

# Release profile tuned for a snappy menubar tool: LTO + a single codegen unit
# give a measurable runtime speedup (loops / iterator chains inline better) in
# exchange for slower release builds, and `panic = "abort"` shrinks the binary
# and skips unwind-table work at call sites.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
