[package]
name = "stash-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stash"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "time"] }
dirs-next = "2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
