[package]
name = "stash-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stash"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "time"] }
dirs-next = "2"

# Profile rules live at the workspace root (src-tauri/Cargo.toml) — a
# per-crate `[profile.*]` block is ignored when the crate is part of a
# workspace, and Cargo warns about it on every build.
